Fix shift tests
So that they test equality instead of always passing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A finite key-value cache using the Least Recently Used (LRU) cache algorithm where the most recently used objects are keept in cache while less recently used items are purged.",
   "main": "index.js",
   "scripts": {
-    "test": "test.js"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
